--- a/Q-Qubit.html
+++ b/Q-Qubit.html
@@ -1937,27 +1937,38 @@ axesLabelStyle = {
 
 	width:  128,
 	height: 128,
-	fillStyle: '#000',
+	fillStyle: '#000000',
 	font: 'bold italic 64px Georgia, "Times New Roman", serif'
 },
-xAxisLabel = new SurfaceText( axesLabelStyle ),
-yAxisLabel = new SurfaceText( axesLabelStyle ),
-zAxisLabel = new SurfaceText( axesLabelStyle )
+xAxisLabel = new THREE.Sprite( 
 
-xAxisLabel.print( 'x' )
+	new THREE.SpriteMaterial({ map: SurfaceText( axesLabelStyle )})
+),
+yAxisLabel = new THREE.Sprite( 
+
+	new THREE.SpriteMaterial({ map: SurfaceText( axesLabelStyle )})
+),
+zAxisLabel = new THREE.Sprite( 
+
+	new THREE.SpriteMaterial({ map: SurfaceText( axesLabelStyle )})
+)
+
+xAxisLabel.material.map.print( 'x' )
 xAxisLabel.position.set( 0, 0, 1.45 )
-xAxisLabel.scale.set( 0.002, 0.002, 0.002 )
+xAxisLabel.scale.set( 0.25, 0.25, 0.25 )
 xAxis.add( xAxisLabel )
 
-yAxisLabel.print( 'y' )
+yAxisLabel.material.map.print( 'y' )
 yAxisLabel.position.set( 1.45, 0, 0 )
-yAxisLabel.scale.set( 0.002, 0.002, 0.002 )
+yAxisLabel.scale.set( 0.25, 0.25, 0.25 )
 yAxis.add( yAxisLabel )
 
-zAxisLabel.print( 'z' )
+zAxisLabel.material.map.print( 'z' )
 zAxisLabel.position.set( 0, 1.45, 0 )
-zAxisLabel.scale.set( 0.002, 0.002, 0.002 )
+zAxisLabel.scale.set( 0.25, 0.25, 0.25 )
 zAxis.add( zAxisLabel )
+
+
 
 
 //  Create the line from the sphere’s origin 
@@ -2186,7 +2197,6 @@ function updateBlochVector( input ){
 	}
 	phiLine.setGeometry( phiGeometry )
 	phiMesh.rotation.y = input.phi - Math.PI / 2
-
 }
 
 
