Small Bloch sphere updates.

--- a/Q-Qubit.html
+++ b/Q-Qubit.html
@@ -1221,6 +1221,7 @@
 			<div id="bloch-sphere-qubit-descriptions">
 				<div class="bloch-sphere-qubit-description" 
 					id="bloch-sphere-qubit-description-h">
+					<a href="#.HORIZONTAL"><strong>Horizontal</strong> qubit</a><br>
 					<div class="matrix qubit">
 						<div class="matrix-bracket-left"></div>
 						<div class="matrix-bracket-right"></div>
@@ -1229,17 +1230,14 @@
 							<tr><td>0</td></tr>
 						</table>
 					</div>
-					&nbsp;
-					<div class="left middle">
-						<a href="#.HORIZONTAL">Horizontal qubit</a>
-						<div class="comment">
-							Imagine the 
-							<a href="https://en.wikipedia.org/wiki/North_Pole" target="_blank">North Pole</a>.
-						</div>
+					<div class="comment">
+						Imagine the 
+						<a href="https://en.wikipedia.org/wiki/North_Pole" target="_blank">North Pole</a>.
 					</div>
 				</div>
 				<div class="bloch-sphere-qubit-description" 
 					id="bloch-sphere-qubit-description-v">
+					<a href="#.VERTICAL"><strong>Vertical</strong> qubit</a><br>
 					<div class="matrix qubit">
 						<div class="matrix-bracket-left"></div>
 						<div class="matrix-bracket-right"></div>
@@ -1248,17 +1246,14 @@
 							<tr><td>1</td></tr>
 						</table>
 					</div>
-					&nbsp;
-					<div class="left middle">
-						<a href="#.VERTICAL">Vertical qubit</a>
-						<div class="comment">
-							Imagine the 
-							<a href="https://en.wikipedia.org/wiki/South_Pole" target="_blank">South Pole</a>.
-						</div>
+					<div class="comment">
+						Imagine the 
+						<a href="https://en.wikipedia.org/wiki/South_Pole" target="_blank">South Pole</a>.
 					</div>
 				</div>
 				<div class="bloch-sphere-qubit-description" 
 					id="bloch-sphere-qubit-description-d">
+					<a href="#.DIAGONAL"><strong>Diagonal</strong> qubit</a><br>
 					<div class="matrix qubit">
 						<div class="matrix-bracket-left"></div>
 						<div class="matrix-bracket-right"></div>
@@ -1272,18 +1267,15 @@
 						<tr class="dividend"><td>1</td></tr>
 						<tr class="divisor"><td>√ 2</td></tr>
 					</table>
-					&nbsp;
-					<div class="left middle">
-						<a href="#.DIAGONAL">Diagonal qubit</a>
-						<div class="comment">
-							Imagine the 
-							<a href="https://en.wikipedia.org/wiki/Gulf_of_Guinea" target="_blank">Gulf of Guinea</a>.
-							<!-- off of Africa. -->
-						</div>
+					<div class="comment">
+						Imagine the 
+						<a href="https://en.wikipedia.org/wiki/Gulf_of_Guinea" target="_blank">Gulf of Guinea</a>
+						off of Africa.
 					</div>
 				</div>
 				<div class="bloch-sphere-qubit-description" 
 					id="bloch-sphere-qubit-description-a">
+					<a href="#.ANTI_DIAGONAL"><strong>Anti-diagonal</strong> qubit</a><br>
 					<div class="matrix qubit">
 						<div class="matrix-bracket-left"></div>
 						<div class="matrix-bracket-right"></div>
@@ -1297,23 +1289,20 @@
 						<tr class="dividend"><td>1</td></tr>
 						<tr class="divisor"><td>√ 2</td></tr>
 					</table>
-					&nbsp;
-					<div class="left middle">
-						<a href="#.ANTI_DIAGONAL">Anti-diagonal qubit</a>
-						<div class="comment">
-							Imagine 
-							<a href="https://en.wikipedia.org/wiki/Kiribati" target="_blank">Kiribati</a>.
-							<!-- in the Pacific Ocean. -->
-						</div>
+					<div class="comment">
+						Imagine 
+						<a href="https://en.wikipedia.org/wiki/Kiribati" target="_blank">Kiribati</a>
+						in the Pacific Ocean.
 					</div>
 				</div>
 				<div class="bloch-sphere-qubit-description" 
 					id="bloch-sphere-qubit-description-r">
+					<a href="#.RIGHT_HAND_CIRCULAR_POLARIZED"><strong>Right-hand circular polarized</strong> qubit</a><br>
 					<div class="matrix qubit">
 						<div class="matrix-bracket-left"></div>
 						<div class="matrix-bracket-right"></div>
 						<table>
-							<tr><td>1</td></tr>
+							<tr><td>&nbsp;1</td></tr>
 							<tr><td>-<span class="symbol">i</span></td></tr>
 						</table>
 					</div>
@@ -1322,19 +1311,15 @@
 						<tr class="dividend"><td>1</td></tr>
 						<tr class="divisor"><td>√ 2</td></tr>
 					</table>
-					&nbsp;
-					<div class="left middle">
-						<a href="#.RIGHT_HAND_CIRCULAR_POLARIZED">Right-hand circular polarized qubit</a>
-						<div class="comment">
-							Imagine the
-							<a href="https://en.wikipedia.org/wiki/Gal%C3%A1pagos_Islands" target="_blank">Galápagos Islands</a>.
-							<!-- in the Pacific Ocean. -->
-						</div>
+					<div class="comment">
+						Imagine the
+						<a href="https://en.wikipedia.org/wiki/Gal%C3%A1pagos_Islands" target="_blank">Galápagos Islands</a>
+						in the Pacific Ocean.
 					</div>
 				</div>
 				<div class="bloch-sphere-qubit-description" 
 					id="bloch-sphere-qubit-description-l">
-
+					<a href="#.LEFT_HAND_CIRCULAR_POLARIZED"><strong>Left-hand circular polarized</strong> qubit</a><br>
 					<div class="matrix qubit">
 						<div class="matrix-bracket-left"></div>
 						<div class="matrix-bracket-right"></div>
@@ -1347,17 +1332,12 @@
 					<table class="division">
 						<tr class="dividend"><td>1</td></tr>
 						<tr class="divisor"><td>√ 2</td></tr>
-					</table>
-					&nbsp;
-					<div class="left middle">
-						<a href="#.LEFT_HAND_CIRCULAR_POLARIZED">Left-hand circular polarized qubit</a>
-						<div class="comment">
-							Imagine
-							<a href="https://en.wikipedia.org/wiki/Sumatra" target="_blank">Sumatra</a>.
-							<!-- in the Indian Ocean. -->
-						</div>
+					</table>	
+					<div class="comment">
+						Imagine
+						<a href="https://en.wikipedia.org/wiki/Sumatra" target="_blank">Sumatra</a>
+						in the Indian Ocean.
 					</div>
-
 				</div>
 			</div>
 			<div class="interactive-container" id="bloch-sphere">
