Feature Completion - Add new Registers and Moments
Now user can add new registers and moments to the circuit directly from the UI. The feature was left incomplete, which has been completed with a caveat. The caveat is that, all the circuits on the website has been named 'playground'. If someone could show how to dynamically pickup name of the circuit then it would make this feature truly complete

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
 			</p>
 			<br>
 			<div class="Q-circuit-palette"></div>
-			<div id="example"></div>
+			<div id="playground"></div>
 			<h4>Live probability results</h4>
 			<p>
 				Edit the code above
 				and watch the probability results update in realtime.
 			</p>
-			<pre><samp id="example-report" for="example"></samp></pre>
+			<pre><samp id="example-report" for="playground"></samp></pre>
 			<h3>Free and open-source</h3>
 			<p>
 				Q is free to use, 
@@ -676,8 +676,8 @@ Q`
 	I I X#1 I I I
 	I I I   I I I
 `
-.setName$( 'example' )
-.toDom( 'example' )
+.setName$( 'playground' )
+.toDom( 'playground' )
 .circuit.evaluate$()
 
 
