Fixed result probabilities on homepage

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				Edit the code above
 				and watch the probability results update in realtime.
 			</p>
-			<pre><samp id="example-report" for="playground"></samp></pre>
+			<pre><samp id="playground-report" for="playground"></samp></pre>
 			<h3>Free and open-source</h3>
 			<p>
 				Q is free to use, 
